# spatial-database

./: .gitignore  bench_repair.py  bench_repair_quality.py  bench_topology.py  readme.md  report_2025-12-16.md  requirements.txt
app/: settings.py  urls.py
docs/: ALGORITHMS.md
space_app/: apps.py  tmp_store.py  urls.py  user_store.py  users.json  views.py
space_app/algorithms/: __init__.py  geojson_utils.py  pathfinding.py  selection.py  topology.py  trajectory.py
space_app/cpp_model/: CMakeLists.txt  R_tree.cpp  cpp_dependencies.txt  map_match.cpp  pathfinding_bindings.cpp  r_tree_demo.cpp  r_tree_usage.md  rtree_bindings.cpp  test_json.cpp  test_rtree.py  topology_bindings.cpp  trajectory_bindings.cpp
space_app/cpp_model/include/: geom_common.h
space_app/cpp_model/src/: topology_check.cpp  topology_check.h  topology_core.cpp
space_app/models/: README_models.md  __init__.py  column_constraint.py  create.py  delete.py  foreign_constraint.py  index.py  insert.py  manager.py  select.py  sql_router.py  table.py  update.py  use_demo.py
space_app/static/space_app/: theme.css  theme.js
space_app/templates/: docs.html  login.html  map.html  sql.html  test.html
space_app/templatetags/: helpers.py
space_app/test_cases/: README.md  test_01_table_lonlat_upgrade.py  test_02_ingest_geojson_lonlat.py  test_03_geojson_endpoint.py  test_04_topology_backend_force.py  test_05_topology_backend_auto_smoke.py  test_06_topology_repair_cross_coverage.py  test_07_cross_only_fix_verify.py  test_08_t_junction_endpoint_on_segment_fix.py
